--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -1,21 +1,23 @@
 .btn {
+  @extend %shadow;
+
   display: inline-block;
   padding: 0.6em 3em;
   border-radius: 35px;
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
-  @extend %shadow;
   z-index: 2;
 
   &:hover {
+    @include shadow(0px 0px 30px darken($primary-accent, 2));
+
     -webkit-transform: scale(1.1);
     transform: scale(1.1);
-    -webkit-box-shadow: 0px 0px 30px darken($primary-accent, 2);
-    box-shadow: 0px 0px 30px darken($primary-accent, 2);
   }
 
   &--dark {
     background: $bold-color;
+
     &:hover {
       background: $primary-accent;
     }
