--- a/src/sass/components/_contact-form.scss
+++ b/src/sass/components/_contact-form.scss
@@ -1,30 +1,41 @@
 .contact-form {
+  @include grid(50% 25% 25%, 1fr 5fr 1fr);
+
   width: 100%;
-  display: grid;
-  grid-template-rows: 1fr 5fr 1fr;
-  grid-template-columns: 50% 25% 25%;
   grid-row-gap: 2em;
 
+  @include screen--medium {
+    grid-template-columns: 1fr;
+  }
+
   &__mail {
+    @include shadow(0px 0px 30px rgba(0, 0, 0, 0.7));
+
     grid-column: 1/2;
     grid-row: 1/2;
     padding: 0 2em;
-    -webkit-box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.7);
-    box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.7);
   }
 
   &__message {
+    @include shadow(0px 0px 30px rgba(0, 0, 0, 0.7));
+
     grid-column: 1/4;
     grid-row: 2/3;
     padding: 2em;
-    -webkit-box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.7);
-    box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.7);
+
+    @include screen--medium {
+      grid-column: 1/2;
+    }
   }
 
   &__btn {
     grid-column: 3/4;
     grid-row: 3/4;
     cursor: pointer;
+
+    @include screen--medium {
+      grid-column: 1/2;
+    }
   }
 
   &__mail,
