--- a/src/sass/components/_overlay.scss
+++ b/src/sass/components/_overlay.scss
@@ -1,9 +1,12 @@
 .overlay {
-  position: absolute;
+  @extend %absolute;
+  @extend %flex;
+  @extend %flex-justify;
+
   top: 0;
-  height: 0;
   right: 0;
   left: 0;
+  height: 0;
   z-index: 10000;
   overflow-y: auto;
   background: $secondary-color;
@@ -14,78 +17,78 @@
     height: 100%;
   }
 
-  &.show {
-    .overlay {
-      &__btn {
-        opacity: 1;
-      }
-
-      &__header {
-        opacity: 1;
-        -webkit-transform: translateY(0);
-        transform: translateY(0);
-      }
-
-      &__paragraph {
-        opacity: 1;
-        -webkit-transform: translateX(0);
-        transform: translateX(0);
-      }
-
-      &__image {
-        opacity: 1;
-        -webkit-transform: translateX(0);
-        transform: translateX(0);
-      }
-    }
-  }
-
   &__container {
-    position: relative;
-    min-height: 100%;
+    @extend %absolute;
+    @extend %flex;
+    @extend %flex-align;
+
+    height: 100%;
     width: 100%;
     padding: 4em;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
+    min-height: 900px;
+
+    &.show {
+      z-index: 10000;
+
+      .overlay {
+        &__btn {
+          @extend %full-opacity;
+        }
+
+        &__header {
+          @extend %full-opacity;
+          @include transform(translateY(0));
+        }
+
+        &__paragraph {
+          @extend %full-opacity;
+          @include transform(translateX(0));
+        }
+
+        &__image {
+          @extend %full-opacity;
+          @include transform(translateX(0));
+        }
+      }
+    }
 
     &--centered {
-      position: relative;
+      @extend %relative;
     }
   }
 
   &__header {
+    @extend %no-opacity;
+    @include transform(translateY(-100px));
+
     margin: 0;
-    -webkit-transform: translateY(-100px);
-    transform: translateY(-100px);
-    opacity: 0;
     -webkit-transition: all 0.5s ease-in-out;
     transition: all 0.5s ease-in-out;
   }
 
   &__image {
+    @extend %no-opacity;
+    @include transform(translateX(100px));
+
     height: 645px;
-    opacity: 0;
-    -webkit-transform: translateX(100px);
-    transform: translateX(100px);
     -webkit-transition: all 0.5s ease-in-out;
     transition: all 0.5s ease-in-out;
   }
 
   &__paragraph {
+    @extend %no-opacity;
+    @include transform(translateX(-100px));
+
     max-width: 50%;
-    opacity: 0;
-    -webkit-transform: translateX(-100px);
-    transform: translateX(-100px);
     -webkit-transition: all 0.5s ease-in-out;
     transition: all 0.5s ease-in-out;
   }
 
   &__btn {
-    position: absolute;
+    @extend %absolute;
+    @extend %shadow;
+    @extend %no-opacity;
+
     right: 1em;
     top: 1em;
     background: none;
@@ -95,8 +98,6 @@
     background: $primary-color;
     border-radius: 50%;
     padding: 0.4em 0.6em;
-    @extend %shadow;
-    opacity: 0;
     -webkit-transition: opacity 0.5s ease-in-out;
     transition: opacity 0.5s ease-in-out;
 
@@ -109,20 +110,20 @@
   }
 
   &__content-container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+    @extend %flex;
+    @extend %flex-justify;
+
     margin-top: 4em;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
   }
 }
 
 .nav-overlay {
-  position: absolute;
-  top: 0;
+  @extend %flex;
+  @extend %flex-justify-align;
+
+  position: fixed;
   height: 0;
+  top: 0;
   right: 0;
   left: 0;
   z-index: 10000;
@@ -130,15 +131,6 @@
   background: $secondary-color;
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
 
   &.active {
     height: 100%;
@@ -146,27 +138,26 @@
 }
 
 .gallery-overlay {
-  position: fixed;
+  @extend %no-opacity;
+
   display: none;
+  position: fixed;
   top: 0;
   right: 0;
   left: 0;
   background: $primary-color;
   padding: 4em;
-  opacity: 0;
   -webkit-transition: opacity 0.3s ease-in-out;
   transition: opacity 0.3s ease-in-out;
   overflow-y: auto;
   height: 100%;
 
   &__container {
-    position: relative;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    @extend %relative;
+    @extend %flex;
+    @extend %flex-align;
+
+    height: 100%;
   }
 
   &__photo {
@@ -174,7 +165,8 @@
   }
 
   &__close-btn {
-    position: absolute;
+    @extend %absolute;
+
     top: 0.01em;
     right: 0.1em;
     border: none;
@@ -187,7 +179,8 @@
   }
 
   &__btn {
-    position: absolute;
+    @extend %absolute;
+
     font-size: 6rem;
     border: none;
     height: 100%;
@@ -212,7 +205,8 @@
     z-index: 999;
 
     &.show {
-      opacity: 1;
+      @extend %full-opacity;
+
       -webkit-transition: opacity 0.3s ease-in-out;
       transition: opacity 0.3s ease-in-out;
     }
